<resources>
    <string name="app_name">Scaffold</string>
    <string name="title_activity_main">title</string>
    <string name="hello_world">Hello</string>
    <string name="pause">Game paused</string>
    <string name="start">Start game</string>
    <string name="game_title">game title</string>
    <string name="pause_dialog_title">pause title</string>
    <string name="pause_dialog_message">pause message</string>
    <string name="resume">resume</string>
    <string name="stop">stop</string>
    <string name="textview">TextView</string>
    <string name="xxxx">XXXX</string>
    <string name="_0">0</string>
    <string name="game_paused">Game Paused</string>
    <string name="resume_button">resume button</string>
    <string name="exit_button">Exit button</string>
    <string name="exit">exit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="xxxxx">XXXXX</string>
    <string name="ship_sprite_1">ship sprite 1</string>
    <string name="ship_sprite_2">ship sprite 2</string>
    <string name="ship1imgbutton">ship1ImgButton</string>
    <string name="ship2imgbutton">ship2ImgButton</string>
    <string name="ship3imgbutton">ship3ImgButton</string>
</resources>
