<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        style="@android:style/TextAppearance.DeviceDefault.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.251" />

    <Button
        android:id="@+id/btn_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <RadioGroup
        android:id="@+id/spritesRadioGroup"
        android:layout_width="223dp"
        android:layout_height="77dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.72">

        <RadioButton
            android:id="@+id/ship1ImgButton"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@drawable/ship"
            android:contentDescription="@string/ship1imgbutton"
            android:scaleX="1.7"
            android:scaleY="1.7"
            android:translationX="50dp" />

        <RadioButton
            android:id="@+id/ship2ImgButton"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@drawable/robot"
            android:contentDescription="@string/ship2imgbutton"
            android:scaleX="1.7"
            android:scaleY="1.7"
            android:translationX="50dp" />

        <RadioButton
            android:id="@+id/ship3ImgButton"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@drawable/a10000"
            android:contentDescription="@string/ship3imgbutton"
            android:scaleX="1.7"
            android:scaleY="1.7"
            android:translationX="50dp" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>